force-app/main/default/objects/ssot__HealthScore__dlm/fields/ssot__CurrentScoreDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__CurrentScoreDate__c</fullName>
    <label>Current Score Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CurrentScoreDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>