force-app/main/default/objects/ssot__HealthScore__dlm/fields/ssot__CurrentScoreValueNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__CurrentScoreValueNumber__c</fullName>
    <label>Current Score Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CurrentScoreValueNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>