force-app/main/default/objects/ssot__HealthScore__dlm/fields/ssot__HealthScore_SubjectId_map_Lead_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthScore_SubjectId_map_Lead_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthScore_SubjectId_map_Lead_Id_N_1</label>
    <referenceTo>ssot__Lead__dlm</referenceTo>
    <relationshipLabel>HealthScore_SubjectId_map_Lead_Id_N_1</relationshipLabel>
    <relationshipName>HealthScore_SubjectId_map_Lead_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>