force-app/main/default/objects/ssot__HealthScore__dlm/fields/ssot__PreviousScoreDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__PreviousScoreDate__c</fullName>
    <label>Previous Score Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreviousScoreDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>