force-app/main/default/objects/ssot__HealthScore__dlm/fields/ssot__PreviousScoreNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__PreviousScoreNumber__c</fullName>
    <label>Previous Score Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreviousScoreNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>