force-app/main/default/objects/ssot__HealthScore__dlm/fields/ssot__ScoreChangePercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__ScoreChangePercent__c</fullName>
    <label>Score Change Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ScoreChangePercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>